# gazelle_cc

./: .bazelignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  bazel-gazelle_cpp  deps.bzl  go.mod  go.sum
example/bzlmod/: BUILD  MODULE.bazel  README.md
example/bzlmod/mylib/: mylib.h
example/bzlmod/proto/: mock.h  mock_test.cc  sample.proto
index/conan/: BUILD.bazel  main.go
index/conan/integration_tests/: BUILD  integration_test.go
index/conan/integration_tests/testcases/basic/: BUILD  MODULE.bazel  conanfile.txt  expected.ccindex
index/conan/internal/targets/: BUILD.bazel  grouping.go  grouping_test.go
index/internal/bazel/: BUILD.bazel  query.go
index/internal/bazel/proto/: BUILD.bazel  build.proto  keep.go
index/internal/collections/: BUILD.bazel  collections.go  collections_test.go  set.go  set_test.go
index/internal/indexer/: BUILD.bazel  indexer.go  indexer_test.go
index/internal/indexer/cli/: BUILD.bazel  cli.go
index/internal/tests/: BUILD.bazel  indexer_integration.go  indexer_integration_test.bzl  utils.go
index/internal/tests/example_integration_test/: BUILD.bazel  integration_test.go
index/internal/tests/example_integration_test/indexer/: BUILD.bazel  example.go
index/rules_foreign_cc/: BUILD.bazel  main.go
index/rules_foreign_cc/integration_tests/: BUILD.bazel  integration_test.go
index/rules_foreign_cc/integration_tests/testcases/basic/: BUILD  MODULE.bazel  expected.ccindex
language/cc/: BUILD.bazel  bzldep-index.json  config.go  config_test.go  generate.go  lang.go  resolve.go  source_groups.go  source_groups_test.go
language/cc/parser/: BUILD.bazel  parser.go  parser_test.go
language/cc/testdata/: BUILD.bazel
language/cc/testdata/cc_search/: BUILD.out  README.md
language/cc/testdata/cc_search/prefix/: BUILD.out  prefix.h
language/cc/testdata/cc_search/self/: BUILD.out  self.h
language/cc/testdata/cc_search/stripped_prefix_abs/: BUILD.out
language/cc/testdata/cc_search/stripped_prefix_and_prefix/: BUILD.in
language/cc/testdata/cc_search/stripped_prefix_rel/: BUILD.out
language/cc/testdata/cc_search/use/: BUILD.out  use.cc
language/cc/testdata/cycle-in-existing-units/: BUILD.in  a2.h  expectedStderr.txt
language/cc/testdata/cycle-in-existing-units_no_merge/: BUILD.in  BUILD.out  a1.h  expectedStderr.txt
language/cc/testdata/deps_external/: MODULE.bazel  README.md  expectedStderr.txt
language/cc/testdata/deps_external/bracket/: BUILD.in  BUILD.out  my_test.cc
language/cc/testdata/deps_external/quoted/: BUILD.out  my_test.cc
language/cc/testdata/deps_index/: BUILD.in  BUILD.out  app.cc  expectedStderr.txt  first.ccindex  priority.high.ccindex  priority.low.ccindex
language/cc/testdata/deps_index/erase/: BUILD.in  BUILD.out  README.md
language/cc/testdata/deps_index/internal/: BUILD.in  BUILD.out  README.md  lib.cpp  second.ccIndex
language/cc/testdata/implementation_deps/directory/: BUILD.in  BUILD.out  lib.c  lib.h
language/cc/testdata/implementation_deps/unit/: BUILD.in  BUILD.out  lib.c  lib.h
language/cc/testdata/keep-assigned-groups/module/: BUILD.out
language/cc/testdata/map_kind/: BUILD.in
language/cc/testdata/map_kind/exisitng/: BUILD.in
language/cc/testdata/map_kind/exisitng_alias/: BUILD.out
language/cc/testdata/map_kind/exisitng_custom/: bin.c
language/cc/testdata/map_kind/new/: bin.c
language/cc/testdata/non_locale_file_deps/: BUILD.out
language/cc/testdata/package_by_directory/: expectedStderr.txt
language/cc/testdata/package_by_unit/: expectedStderr.txt
language/cc/testdata/package_by_unit/lib/: BUILD.out  d.h
language/cc/testdata/protobuf/: BUILD.out  MODULE.bazel  interface.proto
language/cc/testdata/protobuf/service_a/: BUILD.out
language/cc/testdata/protobuf/service_b/: BUILD.out  service.proto
language/cc/testdata/protobuf/service_c/: BUILD.in  BUILD.out  model.proto  other.proto  service.proto
language/cc/testdata/protobuf_empty/: BUILD.out  MODULE.bazel
language/cc/testdata/protobuf_filter_generated/default/: BUILD.out
language/cc/testdata/relative_inlcude_paths/: app.cc  config.h
language/cc/testdata/relative_inlcude_paths/module_a/: BUILD.out
language/cc/testdata/relative_inlcude_paths/module_b/: BUILD.out
language/cc/testdata/rules_cleanup/less_srcs/: BUILD.in  a_main.cc
language/cc/testdata/rules_cleanup/no_srcs/: BUILD.in
language/cc/testdata/rules_with_no_sources/: expectedStderr.txt
language/cc/testdata/rules_with_no_sources/directory/: BUILD.out
language/cc/testdata/rules_with_no_sources/unit/: BUILD.out
language/cpp/: BUILD.bazel  config.go  generate.go  lang.go  resolve.go  source_groups.go  source_groups_test.go
language/cpp/parser/: BUILD.bazel  parser.go  parser_test.go
language/cpp/testdata/: BUILD.bazel
language/cpp/testdata/cycle-in-existing-units/: BUILD.out  README.md  expectedStderr.txt
language/cpp/testdata/cycle-in-existing-units_no_merge/: BUILD.out
language/cpp/testdata/deps_external/: MODULE.bazel
language/cpp/testdata/deps_external/bracket/: BUILD.out
language/cpp/testdata/deps_external/quoted/: BUILD.in  BUILD.out  my_test.cc
language/cpp/testdata/keep-assigned-groups/: MODULE.bazel
language/cpp/testdata/keep-assigned-groups/module/: BUILD.in  BUILD.out
language/cpp/testdata/map_kind/exisitng/: BUILD.out  bin.c
language/cpp/testdata/map_kind/exisitng_alias/: BUILD.in  BUILD.out
language/cpp/testdata/map_kind/exisitng_custom/: BUILD.in  BUILD.out
language/cpp/testdata/map_kind/new/: BUILD.out
language/cpp/testdata/non_locale_file_deps/: README.md
language/cpp/testdata/package_by_directory/a/: BUILD.out  d.h  d_test.c
language/cpp/testdata/package_by_unit/lib/: BUILD.in  BUILD.out
language/cpp/testdata/protobuf/: interface_test.cc
language/cpp/testdata/protobuf/service_a/: BUILD.out  (+2 more)
language/cpp/testdata/protobuf_empty/: BUILD.in  BUILD.out
language/cpp/testdata/relative_inlcude_paths/: BUILD.out
language/internal/cc/parser/: BUILD.bazel  parser.go  parser_test.go
language/internal/cpp/parser/: BUILD.bazel  parser.go  parser_test.go
(+67 files in other folders)
