"""Bazel Gazelle extension for rules_cc"""

module(
    name = "gazelle_cc",
)

bazel_dep(name = "gazelle", version = "0.44.0")

# The following deps are using the same versions as upstream gazelle
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_stretchr_testify",
    "org_golang_google_protobuf",
)
