load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cc",
    srcs = [
        "config.go",
        "generate.go",
        "lang.go",
        "resolve.go",
        "source_groups.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/cc",
    visibility = ["//visibility:public"],
    deps = [
        "//language/internal/cc/parser",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//language/proto",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

# gazelle:exclude testdata
go_test(
    name = "cc_test",
    srcs = ["source_groups_test.go"],
    embed = [":cc"],
    deps = ["//language/internal/cc/parser"],
)
