load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "targets",
    srcs = ["grouping.go"],
    importpath = "github.com/EngFlow/gazelle_cc/index/conan/internal/targets",
    visibility = ["//index/conan:__subpackages__"],
    deps = [
        "//index/internal/collections",
        "//index/internal/indexer",
        "@gazelle//label",
    ],
)

go_test(
    name = "targets_test",
    srcs = ["grouping_test.go"],
    embed = [":targets"],
    deps = [
        "//index/internal/collections",
        "//index/internal/indexer",
        "@com_github_stretchr_testify//assert",
        "@gazelle//label",
    ],
)
