load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:exclude keep.go
proto_library(
    name = "build_proto",
    srcs = ["build.proto"],
    visibility = ["//index:__subpackages__"],
)

go_proto_library(
    name = "build_go_proto",
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/bazel/proto",
    proto = ":build_proto",
    visibility = ["//index:__subpackages__"],
)
