load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["parser.go"],
    importpath = "github.com/EngFlow/gazelle_cpp/language/internal/cpp/parser",
    visibility = ["//language/cpp:__pkg__"],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
)
